--- a/views/new.html
+++ b/views/new.html
@@ -13,11 +13,12 @@
        <p><input type="text" placeholder="车牌(车牌尾号)" name="CarNumberPlate"></p>
        <p><input type="text" placeholder="车辆名称(例:标致508)" name="CarName"></p>
        <p><input type="text" placeholder="车辆颜色" name="CarColor"></p>
-       <p><input type="text" placeholder="车辆空余位置" name="CarSeatsCount"></p>
+       <p><input type="text" placeholder="手机" name="MobilePhone"></p>
     {% endif %}
-   
+
+    <p><input type="date" placeholder="出发时间" name="SetoffTime"></p>
     <p><input type="text" placeholder="途径地点" name="RoutePoint"></p>
-    <p><input type="text" placeholder="手机" name="MobilePhone"></p>
+    <p><input type="text" placeholder="空余座位" name="CarSeatsCount" value="4"></p>
     <p><input type="text" placeholder="备注" name="description"></p>
     <p><input type="submit" value="创建"></p>
   </form>
