--- a/views/layout.html
+++ b/views/layout.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <title>{% block title %}Todo App{% endblock %}</title>
   <link rel="stylesheet" href="/layout.css">
+  <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css">
+  <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
+  <script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
 </head>
 <body>
 <section id="content">
