--- a/views/new.html
+++ b/views/new.html
@@ -2,25 +2,27 @@
 
 {% block title %}创建一个车主{% endblock %}
 
+
+{% block retrunButton %}
+  <a href="/" data-role="button" data-icon="back" data-iconpos="notext">返回</a>
+{% endblock %}
 {% block content %}
-  <h1>创建一个车主信息</h1>
-  <p>创建一个车主信息</p>
   <form action="/todo/create" method="post">
-  <p>ste:{{session.loginid}}</p>
+  <!-- <p>ste:{{session.loginid}}</p> -->
 
     {% if !session.loginid %}
-       <p><input type="text" placeholder="车主姓名" name="CarOwnerName"></p>
-       <p><input type="text" placeholder="车牌(车牌尾号)" name="CarNumberPlate"></p>
-       <p><input type="text" placeholder="车辆名称(例:标致508)" name="CarName"></p>
-       <p><input type="text" placeholder="车辆颜色" name="CarColor"></p>
-       <p><input type="text" placeholder="手机" name="MobilePhone"></p>
+       <input type="text" placeholder="车主姓名" name="CarOwnerName" />
+       <input type="text" placeholder="车牌(车牌尾号)" name="CarNumberPlate" />
+       <input type="text" placeholder="车辆名称(例:标致508)" name="CarName" />
+       <input type="text" placeholder="车辆颜色" name="CarColor" />
     {% endif %}
 
-    <p><input type="date" placeholder="出发时间" name="SetoffTime"></p>
-    <p><input type="text" placeholder="途径地点" name="RoutePoint"></p>
-    <p><input type="text" placeholder="空余座位" name="CarSeatsCount" value="4"></p>
-    <p><input type="text" placeholder="备注" name="description"></p>
-    <p><input type="submit" value="创建"></p>
+    <input type="text" placeholder="手机" name="MobilePhone" />
+    <input type="datetime" placeholder="出发时间" name="SetoffTime" />
+    <input type="text" placeholder="途径地点" name="RoutePoint" />
+    <input type="text" placeholder="空余座位" name="CarSeatsCount" value="4"/>
+    <input type="text" placeholder="备注" name="description" />
+    <input type="submit" value="创建" />
   </form>
 {% endblock %}
 
