--- a/views/show.html
+++ b/views/show.html
@@ -2,27 +2,60 @@
 
 {% block title %}{{ todo.name }}{% endblock %}
 
+{% block retrunButton %}
+	<!-- <a href="/" data-role="button" data-icon="back"  class="ui-btn-right"></a>  -->
+	<a href="/" data-role="button" data-icon="back" data-iconpos="notext">返回</a>
+{% endblock %}
+
 {% block content %}
-  <p>车主称呼: {{ todo.carOwnerName }}</p>
-  <p>行程路线: {{ todo.routePoint }}</p>
-  <p>车牌: {{ todo.car.carNumberPlate }}</p>
-  <p>车型: {{ todo.car.carName }}</p>
-  <p>车身颜色: {{ todo.car.carColor }}</p>
-  <p>座位数量: {{ todo.car.carSeatsCount }}</p>
-  <ul class="th">
-    <li>顾客称呼</li>
-    <li>顾客电话</li>
-    <li>等车地点</li>
-  </ul>
-  {% for customerObj in todo.customer %}
-  <ul>
-    <li>{{ customerObj.customerName }}</li>
-    <li>{{ customerObj.customerPhoneNumber }}</li>
-    <li>{{ customerObj.customerLocation }}</li>
-  </ul>
-  {% endfor %}
+
+  <div class="ui-grid-b" >
+      <div class="ui-block-a"><span><b>车主称呼:</b> {{ todo.carOwnerName }} </span></div>
+      <div class="ui-block-b"><span><b>车牌尾号:</b> {{ todo.car.carNumberPlate }}</span></div>
+  </div>
+   <div class="ui-grid-b" >
+      <div class="ui-block-a"><span><b>车型:</b> {{ todo.car.carName }}</span></div>
+      <div class="ui-block-b"><span><b>车身颜色:</b> {{ todo.car.carColor }}</span></div>
+  </div>
+  
+  <p><b>行程路线:</b> {{ todo.routePoint }}</p>
+  <p><b>剩余座位:</b> {{ todo.car.carSeatsCount - todo.customer.length }}</p>
+  {% if todo.car.carSeatsCount - todo.customer.length > 0 %}
+  	<p><a href="/todo/edit/{{ todo._id.toString() }}" data-role="button">预 定</a></p> 
+  {% endif %}
+  <table data-role="table" id="table-column-toggle" data-mode="columntoggle" border="10" class="ui-responsive table-stroke">
+     <thead>
+       <tr>
+         <th data-priority="1">顾客称呼</th>
+         <th data-priority="2">顾客电话</th>
+         <th data-priority="3">等车地点</th>
+       </tr>
+     </thead>
+     <tbody>
+	   {% for customerObj in todo.customer %}
+	       <tr>
+	         <td>{{ customerObj.customerName }}</td>
+	         <td>{{ customerObj.customerPhoneNumber }}</td>
+	         <td>{{ customerObj.customerLocation }}</td>
+	       </tr>
+	   {% endfor %}
+     </tbody>
+   </table>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
   <p><em>Created On: </i> {{ todo.created_on.toDateString() }}</p>
   <p><i>Last Updated On: </i> {{ todo.updated_on.toDateString() }}</p>
-  <p><a href="/">Back to List</a></p>
 {% endblock %}
