--- a/views/layout.html
+++ b/views/layout.html
@@ -41,9 +41,11 @@
        
       <div class="panel-content"> 
 
-      	<ul data-role="listview" data-icon="false">
-      		<li><a href="#demo-links" data-rel="close"> 关闭窗口</a></li>
-		    <li><a href="#">显示所有行程</a></li>
+      	<ul data-role="listview" class="ui-listview">
+      		<li class="ui-first-child" >
+      			<a href="#" data-rel="close"> 关闭窗口</a>
+      		</li>
+		    <li ><a href="/" >显示所有行程</a></li>
 		</ul>
         
       </div> 
