--- a/views/show.html
+++ b/views/show.html
@@ -41,6 +41,21 @@
 	   {% endfor %}
      </tbody>
    </table>
- <!--  <p><em>Created On: </i> {{ todo.created_on.toDateString() }}</p>
-  <p><i>Last Updated On: </i> {{ todo.updated_on.toDateString() }}</p> -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  <p><em>Created On: </i> {{ todo.created_on.toDateString() }}</p>
+  <p><i>Last Updated On: </i> {{ todo.updated_on.toDateString() }}</p>
 {% endblock %}
