--- a/views/layout.html
+++ b/views/layout.html
@@ -9,21 +9,10 @@
   <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css">
   <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
   <script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
-  <style type="text/css">
-  	#content {
-	    padding: 0;
-	    position: absolute !important; 
-	    top : 40px !important;  
-	    right : 0; 
-	    bottom : 40px !important;  
-	    left : 0 !important;     
-	}
-
-  </style>
  </head>
 <body class="ui-mobile-viewport ui-overlay-a">
-<div data-role="page" style="max-height:440px; min-height:440px;">
-	<div data-role="header" data-position="fixed"> 
+<div data-role="page">
+	<div data-role="header" data-position="fixed" style="position: absolute;padding:0;margin:0"> 
 		<a href="#defaultpanel" data-role="button" data-icon="bars" data-iconpos="notext">菜单</a>
         <h1>拼车顾客管理</h1>
         {% block retrunButton %}
@@ -49,7 +38,7 @@
       </div> 
                     
     </div>
-    <div data-role="footer" data-position="fixed"> 
+    <div data-role="footer" data-position="fixed" style="position: absolute;padding:0;margin:0"> 
 		<p>Created By: 小黑工作室</p>
     </div>
 </div>
