修改行程发布页面的 折叠列表，一个展开其他自动关闭功能。 并为改列表增加了 margin0 padding0 的效果

--- a/views/index.html
+++ b/views/index.html
@@ -10,7 +10,7 @@
   <p>现在已经有 <strong>{{ todos.length }}</strong>车辆 准备出发</p> 
    
   <h2>所有行程</h2>
-  <ul data-role="listview" data-inset="true" data-filter="true">
+  <ul data-role="collapsible-set" data-inset="true" data-filter="true" style="margin:0;padding:0">
     {% for todo in todos %}
         <div data-role="collapsible">
           <h1>{{ todo.car.carName }}, {{ todo.car.carSeatsCount - todo.customer.length }}</h1>
