--- a/views/show.html
+++ b/views/show.html
@@ -21,10 +21,17 @@
       <div class="ui-block-d"><span><b>电    话:</b> {{ todo.mobilePhone}}</span></div>
       <div class="ui-block-b"><span><b>剩余座位:</b>{{ todo.car.carSeatsCount - todo.customer.length }}</span></div>
   </div>
-  <p><b>行程路线:</b> {{ todo.routePoint }}</p>
-  <p></p>
+  <div class="ui-grid-b" >
+      <div class="ui-block-d"><span><b>出行日期:</b> {{ todo.setoffDate }}</span></div>
+      <div class="ui-block-b"><span><b>终点:</b> {{ todo.destination }}</span></div>
+  </div>
+  <p><b>出发时间:</b> {{ todo.setoffTime }}</p>
+  <p><b>行程路线:</b></br>
+  	{{ todo.routePoint | replace(',','</br>','g')|safe}}
+  </p>
+  <p><b>备    注:</b> {{ todo.description}}</p>
   {% if todo.car.carSeatsCount - todo.customer.length > 0 %}
-  	<p><a href="/todo/edit/{{ todo._id.toString() }}" data-role="button">预 定</a></p> 
+  	<p><a href="/todo/order/{{ todo._id.toString() }}" data-role="button">预 定</a></p> 
   {% endif %}
   <table data-role="table" id="table-column-toggle" data-mode="columntoggle" border="10" class="ui-responsive table-stroke">
      <thead>
