--- a/views/layout.html
+++ b/views/layout.html
@@ -4,12 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no">
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <title>{% block title %}Todo App{% endblock %}</title>
+  <title>{% block title %}拼车顾客管理{% endblock %}</title>
   <link rel="stylesheet" href="/layout.css">
   <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css">
   <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
   <script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
- </head>
+  
+</head>
 <body class="ui-mobile-viewport ui-overlay-a">
 <div data-role="page">
 	<div data-role="header" data-position="fixed" style="position: absolute;padding:0;margin:0"> 
@@ -32,7 +33,7 @@
 
       	<ul data-role="listview" data-icon="false">
       		<li><a href="#demo-links" data-rel="close"> 关闭窗口</a></li>
-		    <li><a href="#">显示所有行程</a></li>
+		    <li><a href="#">关于我们</a></li>
 		</ul>
         
       </div> 
