--- a/views/new.html
+++ b/views/new.html
@@ -18,8 +18,10 @@
     {% endif %}
 
     <input type="text" placeholder="手机" name="MobilePhone" />
-    <input type="datetime" placeholder="出发时间" name="SetoffTime" />
-    <input type="text" placeholder="途径地点" name="RoutePoint" />
+    <input type="date" placeholder="出发日期" name="SetoffDate" />
+    <input type="time" placeholder="出发时间" name="SetoffTime" />
+    <input type="text" placeholder="终点" name="Destination" />
+    <textarea cols="40" placeholder="途径地点 例如: 软件园二期文思海辉大厦,数字山谷大厦(从一期西门入的第一个十字路口),软件园一期汉王大门出,信息路(7街),信息路(6街),信息路(5街),信息路(4街),信息路(3街),上地东里小区门口,朱房路(G7)" rows="8" name="RoutePoint"></textarea>
     <input type="text" placeholder="空余座位" name="CarSeatsCount" value="4"/>
     <input type="text" placeholder="备注" name="description" />
     <input type="submit" value="创建" />
