--- a/views/layout.html
+++ b/views/layout.html
@@ -9,6 +9,9 @@
   <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css">
   <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
   <script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
+  {% block script %}
+
+  {% endblock %}
   
 </head>
 <body class="ui-mobile-viewport ui-overlay-a">
@@ -20,7 +23,7 @@
 
       	{% endblock %}
     </div>
-    <div data-role="content" id="content">
+    <div data-role="content" id="content" style="overflow: scroll;">
 	    
 			  {% block content %}
 			    <p>Missing content!</p>
