--- a/views/index.html
+++ b/views/index.html
@@ -2,26 +2,25 @@
 
 {% block title %}创建一个行程{% endblock %}
 
-{% block pagename %}创建一个行程{% endblock %}
 {% block retrunButton %}
-   <a href="/bookingcar/new" data-role="button" data-icon="plus" data-iconpos="notext">创建</a>
+   <a href="/todo/new" data-role="button" data-icon="plus" data-iconpos="notext">创建一次行程</a>
 {% endblock %}
  
-{% block route_content %}
-  <p>现在已经有 <strong>{{ bookingcar.length }}</strong>车辆 准备出发</p> 
+{% block content %}
+  <p>现在已经有 <strong>{{ todos.length }}</strong>车辆 准备出发</p> 
    
   <h2>所有行程</h2>
   <ul data-role="collapsible-set" data-inset="true" data-filter="true" style="margin:0;padding:0">
-    {% for bookcar in bookingcar %}
+    {% for todo in todos %}
         <div data-role="collapsible">
-          <h1>{{ bookcar.carOwnerName }}, 出发时间: {{ bookcar.setoffTime }}, 剩余座位:{{ bookcar.car.carSeatsCount - bookcar.customer.length }}</h1>
+          <h1>{{ todo.car.carName }}, 出发时间: {{ todo.setoffTime }}, 剩余座位:{{ todo.car.carSeatsCount - todo.customer.length }}</h1>
            <p>
-              途经: {{ bookcar.routePoint }}</br>
-              <a href="/bookingcar/{{ bookcar._id.toString() }}"> 查看详情</a>
-              <a href="/bookingcar/edit/{{ bookcar._id.toString() }}"> 修改行程</a>
+              途经: {{ todo.routePoint }}</br>
+              <a href="/todo/{{ todo._id.toString() }}"> 查看详情</a>
+              <a href="/todo/edit/{{ todo._id.toString() }}"> 修改行程</a>
               <a href="#popupdelete" data-rel="popup" data-position-to="window" data-transition="pop"> 删除行程</a>
               <div data-role="popup" id="popupdelete" data-theme="a" class="ui-corner-all">
-                  <form action="/bookingcar/delete/{{ bookcar._id.toString()}}">
+                  <form action="/todo/delete/{{ todo._id.toString()}}">
                       <div style="padding:10px 20px;">
                           <h3>请输入管理员密码</h3>
                           <label for="pw" class="ui-hidden-accessible">Password:</label>
